--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stave-wb-block-tailwind-theme",
+  "name": "stave-wb-block-theme",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -16,7 +16,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@thstave/stave-react-utils": "^1.0.7",
     "@thstave/stave-slider-panel": "^1.0.12",
+    "@wordpress/components": "^29.9.0",
+    "@wordpress/icons": "^10.23.0",
     "@wordpress/scripts": "^30.7.0",
+    "lucide-react": "^0.511.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
